--- a/IoTUX/wwwroot/style.css
+++ b/IoTUX/wwwroot/style.css
@@ -38,7 +38,10 @@ span {
 }
 
 .prop-md {
-    text-align:right
+    text-align:right;
+    font-size:smaller;
+    font-style:italic
+
 }
 
 .props-metadata {
