--- a/MqttUX/wwwroot/style.css
+++ b/MqttUX/wwwroot/style.css
@@ -17,6 +17,13 @@ span {
     margin: 5px
 }
 
+label {
+    display: inline-block;
+    width: 140px;
+    text-align: right;
+    margin-right: 5px
+  }​
+
 .prop {
     border: 1px solid grey;
     width: 600px;
